--- a/pymaceuticals-checkpoint.ipynb
+++ b/pymaceuticals-checkpoint.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +709,7 @@
        "49           29.128472                 1  "
       ]
      },
-     "execution_count": 214,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +823,7 @@
        "4     g791     Ramicane    Male          11          16"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +913,7 @@
        "4     c819          0                45.0                 0"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +933,7 @@
        "249"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1065,7 +1065,7 @@
        "917           54.657650                 1  "
       ]
      },
-     "execution_count": 219,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -1774,7 +1774,7 @@
        "49           29.128472                 1  "
       ]
      },
-     "execution_count": 259,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1790,7 +1790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1799,7 +1799,7 @@
        "248"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1818,7 +1818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1928,7 +1928,7 @@
        "Naftisol                                   8.134708                0.596466  "
       ]
      },
-     "execution_count": 222,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1955,7 +1955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2058,7 +2058,7 @@
        "Naftisol              54.331565  52.509285  66.173479  8.134708  0.596466"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2083,16 +2083,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1585e605408>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x21b4ae05648>"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2118,7 +2118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2147,16 +2147,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1585fa9cc88>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x21b4b625d88>"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2179,7 +2179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2208,7 +2208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2232,13 +2232,12 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>index</th>\n",
        "      <th>Mouse ID</th>\n",
+       "      <th>Timepoint</th>\n",
        "      <th>Drug Regimen</th>\n",
        "      <th>Sex</th>\n",
        "      <th>Age_months</th>\n",
        "      <th>Weight (g)</th>\n",
-       "      <th>Timepoint</th>\n",
        "      <th>Tumor Volume (mm3)</th>\n",
        "      <th>Metastatic Sites</th>\n",
        "    </tr>\n",
@@ -2246,63 +2245,58 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>9</td>\n",
-       "      <td>k403</td>\n",
-       "      <td>Ramicane</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>21</td>\n",
-       "      <td>16</td>\n",
+       "      <td>a203</td>\n",
        "      <td>45</td>\n",
-       "      <td>22.050126</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Infubinol</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>20</td>\n",
+       "      <td>23</td>\n",
+       "      <td>67.973419</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>19</td>\n",
-       "      <td>s185</td>\n",
-       "      <td>Capomulin</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>3</td>\n",
-       "      <td>17</td>\n",
+       "      <td>a251</td>\n",
        "      <td>45</td>\n",
-       "      <td>23.343598</td>\n",
+       "      <td>Infubinol</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>21</td>\n",
+       "      <td>25</td>\n",
+       "      <td>65.525743</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>29</td>\n",
-       "      <td>x401</td>\n",
-       "      <td>Capomulin</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>16</td>\n",
-       "      <td>15</td>\n",
+       "      <td>a275</td>\n",
        "      <td>45</td>\n",
-       "      <td>28.484033</td>\n",
-       "      <td>0</td>\n",
+       "      <td>Ceftamin</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>20</td>\n",
+       "      <td>28</td>\n",
+       "      <td>62.999356</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>39</td>\n",
-       "      <td>m601</td>\n",
-       "      <td>Capomulin</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>22</td>\n",
-       "      <td>17</td>\n",
+       "      <td>a411</td>\n",
        "      <td>45</td>\n",
-       "      <td>28.430964</td>\n",
+       "      <td>Ramicane</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>3</td>\n",
+       "      <td>22</td>\n",
+       "      <td>38.407618</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>49</td>\n",
-       "      <td>g791</td>\n",
-       "      <td>Ramicane</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>11</td>\n",
-       "      <td>16</td>\n",
+       "      <td>a444</td>\n",
        "      <td>45</td>\n",
-       "      <td>29.128472</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Ramicane</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>10</td>\n",
+       "      <td>25</td>\n",
+       "      <td>43.047543</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -2314,104 +2308,98 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>95</th>\n",
-       "      <td>1797</td>\n",
-       "      <td>x822</td>\n",
-       "      <td>Ceftamin</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>3</td>\n",
-       "      <td>29</td>\n",
-       "      <td>45</td>\n",
-       "      <td>61.386660</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>1813</td>\n",
-       "      <td>y163</td>\n",
-       "      <td>Infubinol</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>17</td>\n",
-       "      <td>27</td>\n",
-       "      <td>45</td>\n",
-       "      <td>67.685569</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>1845</td>\n",
        "      <td>y769</td>\n",
+       "      <td>45</td>\n",
        "      <td>Ceftamin</td>\n",
        "      <td>Female</td>\n",
        "      <td>6</td>\n",
        "      <td>27</td>\n",
-       "      <td>45</td>\n",
        "      <td>68.594745</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>1855</td>\n",
+       "      <th>96</th>\n",
+       "      <td>y793</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Capomulin</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>17</td>\n",
+       "      <td>17</td>\n",
+       "      <td>31.896238</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
        "      <td>y865</td>\n",
+       "      <td>45</td>\n",
        "      <td>Ceftamin</td>\n",
        "      <td>Male</td>\n",
        "      <td>23</td>\n",
        "      <td>26</td>\n",
-       "      <td>45</td>\n",
        "      <td>64.729837</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>z578</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Ramicane</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>11</td>\n",
+       "      <td>16</td>\n",
+       "      <td>30.638696</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>99</th>\n",
-       "      <td>1872</td>\n",
        "      <td>z581</td>\n",
+       "      <td>45</td>\n",
        "      <td>Infubinol</td>\n",
        "      <td>Female</td>\n",
        "      <td>24</td>\n",
        "      <td>25</td>\n",
-       "      <td>45</td>\n",
        "      <td>62.754451</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>100 rows × 9 columns</p>\n",
+       "<p>100 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    index Mouse ID Drug Regimen     Sex  Age_months  Weight (g)  Timepoint  \\\n",
-       "0       9     k403     Ramicane    Male          21          16         45   \n",
-       "1      19     s185    Capomulin  Female           3          17         45   \n",
-       "2      29     x401    Capomulin  Female          16          15         45   \n",
-       "3      39     m601    Capomulin    Male          22          17         45   \n",
-       "4      49     g791     Ramicane    Male          11          16         45   \n",
-       "..    ...      ...          ...     ...         ...         ...        ...   \n",
-       "95   1797     x822     Ceftamin    Male           3          29         45   \n",
-       "96   1813     y163    Infubinol  Female          17          27         45   \n",
-       "97   1845     y769     Ceftamin  Female           6          27         45   \n",
-       "98   1855     y865     Ceftamin    Male          23          26         45   \n",
-       "99   1872     z581    Infubinol  Female          24          25         45   \n",
+       "   Mouse ID  Timepoint Drug Regimen     Sex  Age_months  Weight (g)  \\\n",
+       "0      a203         45    Infubinol  Female          20          23   \n",
+       "1      a251         45    Infubinol  Female          21          25   \n",
+       "2      a275         45     Ceftamin  Female          20          28   \n",
+       "3      a411         45     Ramicane    Male           3          22   \n",
+       "4      a444         45     Ramicane  Female          10          25   \n",
+       "..      ...        ...          ...     ...         ...         ...   \n",
+       "95     y769         45     Ceftamin  Female           6          27   \n",
+       "96     y793         45    Capomulin    Male          17          17   \n",
+       "97     y865         45     Ceftamin    Male          23          26   \n",
+       "98     z578         45     Ramicane    Male          11          16   \n",
+       "99     z581         45    Infubinol  Female          24          25   \n",
        "\n",
        "    Tumor Volume (mm3)  Metastatic Sites  \n",
-       "0            22.050126                 1  \n",
-       "1            23.343598                 1  \n",
-       "2            28.484033                 0  \n",
-       "3            28.430964                 1  \n",
-       "4            29.128472                 1  \n",
+       "0            67.973419                 2  \n",
+       "1            65.525743                 1  \n",
+       "2            62.999356                 3  \n",
+       "3            38.407618                 1  \n",
+       "4            43.047543                 0  \n",
        "..                 ...               ...  \n",
-       "95           61.386660                 3  \n",
-       "96           67.685569                 3  \n",
-       "97           68.594745                 4  \n",
-       "98           64.729837                 3  \n",
+       "95           68.594745                 4  \n",
+       "96           31.896238                 2  \n",
+       "97           64.729837                 3  \n",
+       "98           30.638696                 0  \n",
        "99           62.754451                 3  \n",
        "\n",
-       "[100 rows x 9 columns]"
+       "[100 rows x 8 columns]"
       ]
      },
-     "execution_count": 267,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2423,38 +2411,51 @@
     "treatment_df = clean_df[clean_df['Drug Regimen'].isin(treatment_list)]\n",
     "\n",
     "# Start by getting the last (greatest) timepoint for each mouse\n",
-    "greatest_tumor_volume = treatment_df.sort_values('Timepoint', ascending=False).drop_duplicates('Mouse ID').sort_index()\n",
+    "# greatest_tumor_volume = treatment_df.sort_values('Timepoint', ascending=False).drop_duplicates('Mouse ID').sort_index()\n",
+    "max_time = treatment_df.groupby([\"Mouse ID\"])['Timepoint'].max() \n",
+    "max_time = max_time.reset_index() \n",
+    "\n",
     "# Merge this group df with the original dataframe to get the tumor volume at the last timepoint\n",
-    "greatest_tumor_volume = greatest_tumor_volume.reset_index()\n",
+    "# greatest_tumor_volume = greatest_tumor_volume.reset_index()\n",
+    "greatest_tumor_volume = max_time.merge(treatment_df,on=['Mouse ID','Timepoint'],how=\"left\")\n",
     "greatest_tumor_volume"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-266-4983ffd2d890>, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-266-4983ffd2d890>\"\u001b[1;36m, line \u001b[1;32m6\u001b[0m\n\u001b[1;33m    tumor_volume_data []\u001b[0m\n\u001b[1;37m                       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The lower quartile of tumor volume is: 37.187743802499995\n",
+      "The upper quartile of tumor volume is: 59.930261755000004\n",
+      "The interquartile range of tumor volume is: 22.74251795250001\n",
+      "The the median of tumor volume is: 45.0 \n"
      ]
     }
    ],
    "source": [
     "# Put treatments into a list for for loop (and later for plot labels)\n",
-    "complete_treatment_list = clean_df(\"Drug Regimen\").unique()\n",
-    "\n",
+    "complete_treatment_list = greatest_tumor_volume[\"Drug Regimen\"].unique()\n",
+    "tumor_volume = greatest_tumor_volume[\"Tumor Volume (mm3)\"]\n",
     "\n",
     "# Create empty list to fill with tumor vol data (for plotting)\n",
-    "tumor_volume_data []\n",
+    "tumor_volume_data = []\n",
     "\n",
     "# Calculate the IQR and quantitatively determine if there are any potential outliers. \n",
+    "quartiles = tumor_volume.quantile([.25,.5,.75])\n",
+    "Q1 = quartiles[0.25]\n",
+    "Q3 = quartiles[0.75]\n",
+    "IQR = Q3 - Q1\n",
     "\n",
-    "    \n",
-    "    # Locate the rows which contain mice on each drug and get the tumor volumes\n",
+    "print(f\"The lower quartile of tumor volume is: {Q1}\")\n",
+    "print(f\"The upper quartile of tumor volume is: {Q3}\")\n",
+    "print(f\"The interquartile range of tumor volume is: {IQR}\")\n",
+    "print(f\"The the median of tumor volume is: {quartiles[0.5]} \")\n",
+    "#     # Locate the rows which contain mice on each drug and get the tumor volumes\n",
     "    \n",
     "    \n",
     "    # add subset \n",
